[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runbook-kit"
version = "0.1.0"
description = "Generate a minimal runbook kit for AI agent repositories."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "agents", "runbook", "developer-tools", "cli", "llmops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]

[project.scripts]
agent-runbook-kit = "agent_runbook_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
